--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -9,7 +9,7 @@
 This is the <b>resources/static/index.html</b> static html file. In this application you could see:
 
 <h2>Web App</h2>
-<p>Get your greeting <a href="/greeting">here</a></p>
+<p>You can see a thymeleaf template <a href="/greeting">here</a></p>
 
 <h2>REST API</h2>
 
