afegit @WebMvcTest per al MainController

--- a/complete/src/main/resources/static/index.html
+++ b/complete/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-This is the <b>resources/static/index.html</b> static html file. In this application you could see:
+Welcome. This is the <b>resources/static/index.html</b> static html file. In this application you could see:
 
 <h2>Web App</h2>
 <p>You can see a thymeleaf template <a href="/greeting">here</a></p>
